# pyfuzz

./: .gitignore  LICENSE  README.md  setup.cfg
example/lossuser/: pyfuzz_loss_user.py
example/mnist/: pyfuzz_mnist.py
example/titanic/: pyfuzz_titanic.py  titanic.py
examples/GRIST/ID_54/: h03_20191644.py
examples/float_precision_errors/: float_precision_errors.py  pyfuzz_float_precision_errors.py
examples/lossuser/: loss_user.py  pyfuzz_loss_user.py
examples/mnist/: mnist.py  pyfuzz_mnist.py
examples/titanic/: pyfuzz_titanic.py  titanic.py
examples/unstable_mnist/: mnist.py  pyfuzz_mnist.py
examples/unstable_mnist/pretrained/: StableModel.pth  UnstableCEModel.pth  UnstableSMCEModel.pth
pyfuzz/: byte_mutations.py  fuzz_data_interpreter.py  fuzzers.py  runners.py
src/examples/GRIST/ID_54/: pyfuzz_h03_20191644.py
src/examples/float_precision_errors/: float_precision_errors.py  pyfuzz_float_precision_errors.py
src/examples/rick_and_morty_stories/: pyfuzz_rick_and_morty_stories.py  rick_and_morty_stories.py
src/examples/unstable_mnist/pretrained/: UnstableSMModel.pth
src/pyfuzz/: __init__.py  coverage.py  fuzz_data_interpreter.py  runners.py  string_mutations.py  test_programs.py
