[metadata]
name = pyfuzz_tool
version = 0.0.5
author = Fabrice Harel-Canada
author_email = fabriceyhc@gmail.com
description = A tool for fuzzing programs in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriceyhc/pyfuzz
project_urls =
    Bug Tracker = https://github.com/fabriceyhc/pyfuzz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
include_package_data = True


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas


[options.packages.find]
where = src


[options.package_data]
* = *.csv